Swagger documentation fixed
